fix gap before footer

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -110,7 +110,7 @@ header {
 }
 
 .restaurants {
-    margin: 30px 0 30px 0;
+    margin: 30px 0 0 0;
     padding: 18px;
     background: $bg-color;
     .card {
